apps/auth-service/test/setup.ts
// Jest setup file for Auth Service tests
import 'reflect-metadata';

// Global test configuration
global.console = {
  ...console,
  // Uncomment to disable logs during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};
